// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Snap render Divider -- props childen 1`] = `
<div
  childen="content"
  class="ob-divider"
>
  <div
    class="ob-divider__content"
  >
    
    test
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props className 1`] = `
<div
  class="ob-divider test"
>
  <div
    class="ob-divider__content"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props content 1`] = `
<div
  class="ob-divider"
>
  <div
    class="ob-divider__content"
  >
    content
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props customStyle 1`] = `
<div
  class="ob-divider"
  style=""
>
  <div
    class="ob-divider__content"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props fontColor 1`] = `
<div
  class="ob-divider"
>
  <div
    class="ob-divider__content"
    style="color: rgb(255, 255, 255);"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props fontSize 1`] = `
<div
  class="ob-divider"
>
  <div
    class="ob-divider__content"
    style="font-size: 56;"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props height 1`] = `
<div
  class="ob-divider"
  style=""
>
  <div
    class="ob-divider__content"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;

exports[`Divider Snap render Divider -- props lineColor 1`] = `
<div
  class="ob-divider"
>
  <div
    class="ob-divider__content"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
    style="background-color: rgb(255, 255, 255);"
  />
</div>
`;

exports[`Divider Snap render initial Divider 1`] = `
<div
  class="ob-divider"
>
  <div
    class="ob-divider__content"
  >
    
    
  </div>
  <div
    class="ob-divider__line"
  />
</div>
`;
